<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_bg4_corner"
    android:layout_centerInParent="true">


    <LinearLayout
        android:id="@+id/ll_mode_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rg_mode"
            android:layout_width="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sale_movie" />

            <RadioButton
                android:id="@+id/rb_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/select_movie" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:layout_below="@id/ll_mode_layout">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/ok_string" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/cancel_string" />
    </RelativeLayout>

</RelativeLayout>