<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutError"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true" >
    	    
    <ImageView
        android:id="@+id/ivError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/empty_string" 
        android:src="@drawable/movie_error" />
    
    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivError"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff4500"
  		android:textSize="28sp" />	
  		
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/tvError"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" >	            	            
          
        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"			            
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" 
            android:layout_marginRight="30dp"
            android:text="@string/try_again" 
            android:gravity="center" 
            android:textSize="24sp" 
            android:background="@drawable/btn_base" />	  
            
        <Button
            android:id="@+id/btnErrorReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/btnTryAgain"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/close_return" 
            android:gravity="center" 
            android:textSize="24sp" 
            android:background="@drawable/btn_base" />	  			        		        			        
             	            	                     
      	</RelativeLayout>		  
    
</RelativeLayout>